assets/js/Components/PGCR/style.css
.activity-wrapper{
    display: flex;
    flex-direction: column;
}

.pgcr-item {
    border: 1xp solid var(--crucible-dark-3);
    background-color: var(--grey-dark-3);
    margin: 5px;
    border-radius: 5px;
    list-style: none;
    min-height: 40px;
    margin-top: 20px;
    box-shadow: 1px 1px 8px black;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.pgcr-dropdown{
    border: 1xp solid var(--crucible-dark-4);
    background-color: var(--grey-dark-4);
    color: var(--vanguard-light-5);
    margin-top: 20px;
    margin-bottom: 20px;
    border-radius: 5px;
}

.pgcr-game-wrapper{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-column-gap: 15px;
    justify-items: center;
    align-items: center;
    height: 3em;
}



.pgcr-game-wrapper-expanded{
    /* width: 600px; */
    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-column-gap: 15px;
    border-radius: 5px;
}

.pgcr-char-wrap{
    display: grid;
    grid-template-columns: 3fr 1fr 1fr 1fr 1fr 1fr;
    grid-column-gap: 15px;
    /* border-bottom: 1px solid var(--vanguard-light-2); */
    background: var(--grey-dark-2);
    text-align: left;
    margin: 2px;
    padding: 2px;
    align-items: flex-end;
    cursor: default;
}

.pgcr-game-wrapper{
    /* Passed as JS */

}

.player-icon{
    min-height: 25px;
    min-width: 25px;
    margin-right: 10px;
    display: inline-block;
    background-repeat: no-repeat;
    background-size: contain;
}

.player-stats-completed{
    float: right;
    padding-right: 4px;
}

.player-name-icon{
    /* min-width: 200px; */
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.pgcr-player-stats{
    margin-top: auto;
}

.pgcr-wrapper{
    /* display: flex;
    flex-direction: row;
    text-align: center; */
    width: 100%
}


.pgcr{
    font-size: 16px;
}

.pgcr-pointer{
    cursor: pointer;
}

.pgcr-ul{
    padding-left: unset;
    padding-top: 10px;
    padding-bottom: 10px;
}

.activity-list-wrapper{
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    border: 1xp solid var(--crucible-dark-2);
    background-color: var(--grey-dark-4);
    color: var(--vanguard-light-5);
    border-radius: 5px;
    padding: 20px;
    margin-top: 0;
    list-style: none;
}

.activity-list{
    list-style: none;
    padding: 0;
    margin: 0;    
}

.activity-icon{
    min-height: 150px;
    min-width: 150px;
    margin-right: 10px;
    display: inline-block;
    background-repeat: no-repeat;
    background-size: contain;
}

.activity-name::before{
    display:inline-block;
    content:'';
}
.activity-name{
    font-size: 1.2em;;
    text-transform: uppercase;
}

.activity-icon-name-wrapper{
    display: flex;
    flex-direction: column;
    height: 100%;
    /* width: 110px; */
    justify-content: space-evenly;
    /* margin-left: 10px; */
}

.activity-results-wrapper{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: end;
    margin-right: 20px;
}

.activity-results{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    grid-gap: 5px;
    font-size: 1.1em;
    /* margin-top: 10px; */
    margin-bottom: 20px;
}

.activity-results-wrapper.h3{
    padding-top: 20px;
    font-size: 1.3em;
}

h2.activity-map-name{
    text-transform: uppercase;
    font-size: 1.9em;
    margin: 0;
    padding: 0;
}

.header-completion-time{
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: right;
    align-items: end;
    height: 100%;
}

.completion-time-value{
    margin: 0;
    padding: 0;
}

/* Standing style: */
.standing{
    text-transform: uppercase;
}

.standing-victory{
    border-left: 5px solid var(--gambit-green);
}

.standing-defeat{
    border-left: 5px solid var(--crucible-red);
}

/* Team styles: */
.team-alpha{
    background-color: var(--crucible-dark-1);
    color: white;
}

/* Team styles: */
.team-bravo{
    background-color: var(--vanguard-dark-1);
    color: white;
}

